--- a/TKK_Application/TKK_Application.csproj
+++ b/TKK_Application/TKK_Application.csproj
@@ -41,6 +41,7 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>C:\Advantech\DAQNavi\Automation.BDaq\4.0.0.0\Automation.BDaq4.Design.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.VisualBasic" />
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -69,6 +70,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StatusIO.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StatusIO.Designer.cs">
+      <DependentUpon>StatusIO.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -83,7 +90,11 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="StatusIO.resx">
+      <DependentUpon>StatusIO.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="App.config" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
@@ -94,6 +105,33 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yast-green-dot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\yast-red-dot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green_dot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\red_dot.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\botonrojooscuro-md.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\green-button-md.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\glossy-darkgray-button-md.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\glossy-green-button-md.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\sinel logo.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
