Scanner control added User interface changes

--- a/TKK_Application/TKK_Application.csproj
+++ b/TKK_Application/TKK_Application.csproj
@@ -60,6 +60,9 @@
   <PropertyGroup>
     <SignManifests>true</SignManifests>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icon.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Automation.BDaq4, Version=4.0.0.0, Culture=neutral, PublicKeyToken=463f5928d60183a0, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -88,6 +91,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="csvLogger.cs" />
+    <Compile Include="IOControl.cs" />
     <Compile Include="LoginForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -108,11 +113,24 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="scannerControl.cs" />
+    <Compile Include="settingsEditor.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="settingsEditor.Designer.cs">
+      <DependentUpon>settingsEditor.cs</DependentUpon>
+    </Compile>
     <Compile Include="StatusIO.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="StatusIO.Designer.cs">
       <DependentUpon>StatusIO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="UserForm.Designer.cs">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="LoginForm.resx">
       <DependentUpon>LoginForm.cs</DependentUpon>
@@ -133,12 +151,19 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="settingsEditor.resx">
+      <DependentUpon>settingsEditor.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="StatusIO.resx">
       <DependentUpon>StatusIO.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserForm.resx">
+      <DependentUpon>UserForm.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="App.config">
       <SubType>Designer</SubType>
     </None>
+    <None Include="ClassDiagram1.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -148,6 +173,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <None Include="Resources\ProcessLog.csv" />
     <None Include="TKK_Application_TemporaryKey.pfx" />
   </ItemGroup>
   <ItemGroup>
@@ -215,6 +241,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\user_2.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="icon.ico" />
+    <None Include="Resources\if_Control Panel_51386.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
