--- a/TKK_Application/Properties/Settings.settings
+++ b/TKK_Application/Properties/Settings.settings
@@ -2,17 +2,26 @@
 <SettingsFile xmlns="http://schemas.microsoft.com/VisualStudio/2004/01/settings" CurrentProfile="(Default)" GeneratedClassNamespace="TKK_Application.Properties" GeneratedClassName="Settings">
   <Profiles />
   <Settings>
-    <Setting Name="db_loc" Type="System.String" Scope="Application">
+    <Setting Name="db_loc" Type="System.String" Scope="User">
       <Value Profile="(Default)">"G:\2017\database_access.accdb"</Value>
     </Setting>
     <Setting Name="archive_loc" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
-    </Setting>
-    <Setting Name="Export_folder" Type="System.String" Scope="User">
-      <Value Profile="(Default)" />
+      <Value Profile="(Default)">"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\ARHIVA"</Value>
     </Setting>
     <Setting Name="db_passwd" Type="System.String" Scope="User">
       <Value Profile="(Default)">0000</Value>
+    </Setting>
+    <Setting Name="csvInput_loc" Type="System.String" Scope="User">
+      <Value Profile="(Default)">"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\Res\Programi.csv"</Value>
+    </Setting>
+    <Setting Name="IOdeviceNum" Type="System.String" Scope="User">
+      <Value Profile="(Default)">1</Value>
+    </Setting>
+    <Setting Name="ScannerCOM" Type="System.String" Scope="User">
+      <Value Profile="(Default)">COM5</Value>
+    </Setting>
+    <Setting Name="archiveTemplate" Type="System.String" Scope="User">
+      <Value Profile="(Default)">"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\Res\ProcessLog.csv"</Value>
     </Setting>
   </Settings>
 </SettingsFile>
