-removed lock from setOutput function

--- a/TKK_Application/App.config
+++ b/TKK_Application/App.config
@@ -36,25 +36,35 @@
   <userSettings>
     <TKK_Application.Properties.Settings>
       <setting name="db_loc" serializeAs="String">
-        <value>"G:\2017\database_access.accdb"</value>
+        <value>'D:\N046_17 DOKUMENTACIJA I PROGRAM\Res\database_access.accdb'</value>
       </setting>
       <setting name="archive_loc" serializeAs="String">
-        <value>"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\ARHIVA"</value>
+        <value>D:\Arhiva\ARHIVA</value>
       </setting>
       <setting name="db_passwd" serializeAs="String">
         <value>0000</value>
       </setting>
       <setting name="csvInput_loc" serializeAs="String">
-        <value>"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\Res\Programi.csv"</value>
+        <value>'D:\N046_17 DOKUMENTACIJA I PROGRAM\PROGRAMI\Transporter.csv'</value>
       </setting>
       <setting name="IOdeviceNum" serializeAs="String">
         <value>1</value>
       </setting>
       <setting name="ScannerCOM" serializeAs="String">
-        <value>COM5</value>
+        <value>COM8</value>
       </setting>
       <setting name="archiveTemplate" serializeAs="String">
-        <value>"G:\2017\N046_17 DOKUMENTACIJA I PROGRAM\Res\ProcessLog.csv"</value>
+        <value>"D:\2017\N046_17 DOKUMENTACIJA I PROGRAM\Res\ProcessLog.csv"</value>
+      </setting>
+      <setting name="LogPath" serializeAs="String">
+        <value>'D:\N046_17 DOKUMENTACIJA I PROGRAM\LOGS'</value>
+      </setting>
+      <setting name="stopTimerTime" serializeAs="String">
+        <value>5000</value>
+      </setting>
+      <setting name="Setting" serializeAs="String">
+        <value>
+        </value>
       </setting>
     </TKK_Application.Properties.Settings>
   </userSettings>
