--- a/TKK_Application/TKK_Application.csproj
+++ b/TKK_Application/TKK_Application.csproj
@@ -23,7 +23,7 @@
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <ApplicationRevision>0</ApplicationRevision>
+    <ApplicationRevision>1</ApplicationRevision>
     <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
@@ -47,6 +47,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>E77C06F41A86914DFB0161A758BE14C0EDA3047A</ManifestCertificateThumbprint>
@@ -111,6 +112,13 @@
     <Compile Include="Parametri skenera.Designer.cs">
       <DependentUpon>Parametri skenera.cs</DependentUpon>
     </Compile>
+    <Compile Include="processCollector.cs" />
+    <Compile Include="ProcessLogger.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="ProcessLogger.Designer.cs">
+      <DependentUpon>ProcessLogger.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="scannerControl.cs" />
@@ -125,6 +133,12 @@
     </Compile>
     <Compile Include="StatusIO.Designer.cs">
       <DependentUpon>StatusIO.cs</DependentUpon>
+    </Compile>
+    <Compile Include="StopInfo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="StopInfo.Designer.cs">
+      <DependentUpon>StopInfo.cs</DependentUpon>
     </Compile>
     <Compile Include="UserForm.cs">
       <SubType>Form</SubType>
@@ -141,6 +155,9 @@
     <EmbeddedResource Include="Parametri skenera.resx">
       <DependentUpon>Parametri skenera.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="ProcessLogger.resx">
+      <DependentUpon>ProcessLogger.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -156,6 +173,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="StatusIO.resx">
       <DependentUpon>StatusIO.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="StopInfo.resx">
+      <DependentUpon>StopInfo.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="UserForm.resx">
       <DependentUpon>UserForm.cs</DependentUpon>
@@ -244,6 +264,13 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="icon.ico" />
+    <None Include="Resources\log-512.png" />
+    <None Include="Resources\stop_35_35.png" />
+    <None Include="Resources\arrow_rev_35_35.png" />
+    <None Include="Resources\arrow_fwd_35_35.png" />
+    <None Include="Resources\arrow_fwd_50_50.png" />
+    <None Include="Resources\arrow_fwd.png" />
+    <None Include="Resources\ioProfile.xml" />
     <None Include="Resources\if_Control Panel_51386.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
